# stroustrup-ppp-solutions

./: .gitignore  README.md  a.txt  super_revision.cpp  test.cpp
GUI_revision/: unnamed objects.cpp
aoc2023/day1/: out.txt  puzzle_a.cpp  puzzle_b.cpp
aoc2023/day2/: puzzle_a.cpp  puzzle_b.cpp
aoc2023/day3/: puzzle_a.cpp  puzzle_b.cpp
aoc2023/day4/: puzzle_a.cpp
chap04/: closest_diffs.cpp  drill.cpp  ex_10.cpp  ex_11.cpp  ex_12.cpp  ex_13.cpp  ex_15.cpp  ex_16.cpp  ex_18.cpp  ex_2.cpp  ex_21.cpp  ex_4.cpp  ex_6.cpp  ex_7.cpp  ex_8.cpp  ex_9.cpp  review  try_5.cpp  try_6.cpp
chap05/: ex_10.cpp  ex_11.cpp  ex_12.cpp  ex_14.cpp  ex_8.cpp  ex_9.cpp  review  slicing_example.cpp  try_3.cpp  try_4.cpp  try_5.cpp  try_6.cpp  try_7.cpp  try_8.cpp  try_9.cpp
chap06/: calculator.cpp
chap08/: drill_3.cpp  ex_12.cpp  ex_3.cpp  ex_5.cpp  review
chap08/drill_1/: my.cpp
chap09/: classes.cpp  enum.cpp  review  revision.cpp  structs.cpp
chap09/Book_Class/: Book_Class.sln
chap09/Money Class/: Money Class.sln
chap10/: failbits.cpp  io_err_handling.cpp  revision.cpp  single_int.cpp  ymd_temp_output.txt  ymd_temperature.cpp
chap11/: bin_input.txt  bin_output.txt  drill.cpp  ex_02_input.txt  ex_06.cpp  log.txt  number_systems.cpp  review  revision.cpp
chap12/: review
chap12/Canvas Example/: Canvas Example.sln
chap12/circle_from_scratch/: circle_from_scratch.sln
chap12/ex_01_poly_rect/: ex_01_poly_rect.sln
chap12/ex_02_howdy/: ex_02_howdy.sln
chap12/ex_03_initials/: ex_03_initials.sln
chap12/ex_04_tic_tac/: ex_04_tic_tac.sln
chap12/ex_05_frame/: ex_05_frame.sln
chap12/ex_08_olympics/: ex_08_olympics.sln
chap12/ex_09_caption/: ex_09_caption.sln
chap12/ex_11_poly/: ex_11_poly.sln
chap12/ex_12_super_ellipse/: ex_12_super_ellipse.sln
chap13/: review
chap13/Examples/: Examples.sln
chap13/arrow_bad/: ex_03.sln
chap13/drill/: drill.sln
chap13/ex_01/: ex_01.sln
chap13/ex_02/: ex_02.sln
chap13/ex_05/: ex_05.sln
chap13/ex_08/: ex_08_09.sln
chap13/ex_10/: ex_10.sln
chap13/ex_12/: ex_12.sln
chap13/ex_14/: ex_14.sln
chap13/ex_19/: ex_19.sln
chap14/: drill.cpp  inheritance_types.cpp  log.txt  overriding.cpp  review  revision.cpp  revision_2.cpp
chap14/Shapes_test/: Shapes_test.sln
chap14/ex_01/: ex_01.sln
chap14/ex_05_06_07/: ex_05_06_07.sln
chap15/: drill.cpp  ex_01.cpp  review
chap15/ex_06/: ex_06.sln
chap16/: review
chap17/: drill01.cpp  drill02.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp  ex12.cpp  ex13.cpp  ex14.cpp  linked_li_first.cpp  linked_list.cpp  rev_Link.cpp  rev_baseptr_destructors.cpp  rev_ex01.cpp  rev_ex03.cpp  rev_ex04.cpp  rev_ex05.cpp  rev_ex06.cpp  rev_ex07.cpp  rev_ex09.cpp  rev_subscripting_baseptr.cpp  review  revision.cpp  v_destructor.cpp  vector.cpp  vector_revision_1.cpp
chap18/: arrays.cpp  copy and move semantics.cpp  drill_1.cpp  drill_2.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  palindromes.cpp  rev_arrays.cpp  rev_ex01.cpp  review  tryit_operations.cpp  tryit_ops_output_explained.txt  vector.cpp
chap19/: RAII_exceptions.cpp  drill.cpp  ex01.cpp  ex02.cpp  ex03_Pair.cpp  ex04_Link.cpp  ex06_07_Number.cpp  ex09.cpp  ex12_File_Handle.cpp  ex13_Tracer.cpp  ex16_VecInt.cpp  raii.cpp  rev_arrs.cpp  rev_vector.cpp  review  revision.cpp  simple_raii.cpp  templates.cpp  vector.cpp  vector_old.cpp
chap19/Template_Vector/: Book.h  CMakeLists.txt  Debug.h  Vector_Base.h  Vector_Strict.h  main.cpp  vector.h  vector_impl.h
chap20/: drill.cpp  ex02_JJ_Iterators.cpp  ex07.cpp  ex20_vector_list_performance_test.cpp  jack_and_jill.cpp  review  revision.cpp  test_middle_insertion.cpp  tt1.cpp  tt2.cpp  vector_revision.cpp  velocities.data
chap20/STL_vector_Implementation/: CMakeLists.txt  Debug.h  PreLoad.cmake  VectorIO.h  Vector_Base.h  Vector_Strict.cpp  chapters.txt  main.cpp  vector.h
chap21/: algorithms.cpp  dow_index.cpp  drill3_input.txt  drill_1.cpp  drill_2.cpp  drill_3.cpp  drill_input.txt  ex02.html  ex03.cpp  ex04.cpp  ex06.cpp  ex07.cpp  ex07_list.cpp  ex07_vector.cpp  ex08.cpp  input.txt  iostreams.cpp  output.txt  review  revision.cpp  sorting.cpp  stream_its.cpp
chap22/: paradigms.cpp  review
chap23/: credit_card_nums.txt  date_file.txt  date_iso_out.txt  ex06.cpp  ex07.cpp  ex_12.cpp  ex_13.cpp  in.txt  in2.txt  regex.cpp  review  strings.cpp  table.txt  table_regex.cpp  try_this.cpp
chap24/: arrays.cpp  drill.cpp  errno.cpp  ex01.cpp  ex1.cpp  ex11.cpp  ex12.cpp  hist.txt  limits.cpp  matrix.cpp  precision_overflow.cpp  random.cpp  rev_drill.cpp  review  sum_of_digits.cpp  tt2.cpp
chap25/: array_ref.cpp  bits.cpp  drill.cpp  dysfunctional_interface.cpp  ex02.txt  ex03.cpp  ex05_06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10_11.cpp  ex14.cpp  ex17.cpp  in  review  tiny_encryption_algo.cpp  tt1.cpp
chap26/: bin_search.cpp  drill_1.cpp  drill_2.cpp  drill_3.cpp  drill_3_tests.txt  drill_tests.txt  ex01.cpp  ex01_tests.txt  ex03.cpp  ex04.txt  ex12.cpp  ex13.cpp  ex14.cpp  review
chap27/: chapter_work.c  drill.c  ex01.c  ex07.txt  ex09.c  ex13.c  ex14.c  intrusive_containers.c  review  tt1.c
cmake-tutorial/: CMakeLists.txt  README.md  tutorial.md
cmake-tutorial/Math Library Example/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
cmake-tutorial/Math Library Example/MathFunctions/: CMakeLists.txt  mysqrt.cpp
cmake-tutorial/complete-project/: README.md
cmake-tutorial/extended-project/: README.md
cmake-tutorial/extended-project/cmake/: FindBoost.cmake
cmake-tutorial/extended-project/include/modern/: lib.hpp
cmake-tutorial/extended-project/src/: CMakeLists.txt  lib.cpp
cmake-tutorial/simple-calculator/: CMakeLists.txt
cmake-tutorial/single-lib-project/: CMakeLists.txt  main.cpp
cmake-tutorial/single-lib-project/src/: lib.cpp
extra/cmake-tutorial/complete-project/: CMakeLists.txt
extra/cmake-tutorial/complete-project/apps/: app.cpp
extra/cmake-tutorial/simple-root-project/: CMakeLists.txt
misc programs/: destructors_called.cpp
projects/: linked_list.cpp
(+210 files in other folders)
